# runaway-alarm

./: .gitignore  CMakeLists.txt  README.md  main.c
.cache/clangd/index/: alarm.c.AE78378D03F8D100.idx  alarm.h.BA75FAABAD0BED2C.idx  deep_sleep.c.05F971640BF97747.idx  deep_sleep.h.545B2E3C7217A055.idx  main.c.1B5384A51CBD484E.idx  main.c.2220621A8B6AE287.idx  motor_driver.c.C4C982E539FD53D2.idx  motor_driver.h.EB4F3668989B14AF.idx  motor_test.c.884C4B66A29CD585.idx
docs/: connections.md  system-overview.md
src/app/: CMakeLists.txt  alarm.c  alarm.h  main.c  main.c.bak  motion_logic.c  motion_logic.h  state_machine.c  state_machine.h  web_server.c  web_server.h
src/common/: CMakeLists.txt  deep_sleep.c  deep_sleep.h
src/drivers/: CMakeLists.txt  buzzer.c  buzzer.h  motor_driver.c  motor_driver.h  push_button.c  push_button.h  ultrasonic_sensor.c  ultrasonic_sensor.h
src/tests/: CMakeLists.txt  motor_test.c  test_motor_driver.c  test_ultrasonic_sensor.c
